# karger_extensions

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  grabcut.txt  pyproject.toml
scripts/: all.sh  create_graphs.sh  metrics.sh  potential_plots.sh  potentials.sh  prepare_datasets.sh  segmentation_plots.sh
src/: calculate_all_rw_potentials.py  calculate_rw_potential.py  grabcut_metrics.py  img_to_graph.py  plot_potentials.py  plot_segmentation.py  read_usps.py  usps_graph.py  usps_metrics.py
src/julia/: calculate_all_potentials.jl  calculate_potential.jl  calculate_power_watershed.jl  calculate_power_watershed_multi.jl  calculate_watershed.jl  karger.jl  utilities.jl
src/python/: image.py  random_walker.py
